kotlin-ide/idea/testData/multiplatform/correctOverloadResolutionAmbiguity/js/js.kt
actual interface A<T> {
    actual fun foo(x: T)
    fun foo(x: String)
}

fun main() {
    bar().<!OVERLOAD_RESOLUTION_AMBIGUITY!>foo<!>("")
}
